--- a/spring-flow/spring-flow/src/main/webapp/WEB-INF/web.xml
+++ b/spring-flow/spring-flow/src/main/webapp/WEB-INF/web.xml
@@ -5,21 +5,21 @@
 
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
-	<context-param>
+<!--  	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-mvc.xml</param-value>
+		<param-value>classpath:spring.xml</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	</listener> -->
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>
 			org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
-		<init-param>
+ 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:spring.xml</param-value>
+			<param-value>classpath:spring-mvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
