--- a/spring-flow/spring-flow/pom.xml
+++ b/spring-flow/spring-flow/pom.xml
@@ -62,6 +62,13 @@
 			<artifactId>spring-web</artifactId>
 			<version>4.3.3.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.webflow/spring-webflow -->
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.4.4.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>spring-flow</finalName>
