--- a/spring-flow/spring-flow/src/main/webapp/WEB-INF/web.xml
+++ b/spring-flow/spring-flow/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,13 @@
 
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
-<!--  	<context-param>
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring.xml</param-value>
+		<param-value>classpath:spring/spring-mvc.xml</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener> -->
+	</listener>
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>
@@ -19,12 +19,12 @@
 		</servlet-class>
  		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:spring-mvc.xml</param-value>
+			<param-value>classpath:spring/spring.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
