--- a/spring-flow/spring-flow/src/main/webapp/WEB-INF/web.xml
+++ b/spring-flow/spring-flow/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>spring</servlet-name>
-        <url-pattern>/spring/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
