--- a/spring-flow/flow/build.gradle
+++ b/spring-flow/flow/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = 1.5
 
 repositories {
     mavenCentral()
-    maven { url 'http://maven.aliyun.com/mvn/repository/' }
+    //maven { url 'http://maven.aliyun.com/mvn/repository/' }
 }
 
 
@@ -19,16 +19,16 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.3.RELEASE'
     compile group: 'taglibs', name: 'standard', version: '1.1.2'
     compile group: 'org.springframework', name: 'spring', version: '2.5.6.SEC03'
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.0.M1'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.2.8.v20150217'
 
 }
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'jetty'
-jettyRun{
-    webAppSourceDirectory= file("$projectDir/src/main/webapp")
-    httpPort =8080
-    contextPath =project.name
-    scanIntervalSeconds= 0
-    reload="automatic"
+jettyRun {
+    webAppSourceDirectory = file("$projectDir/src/main/webapp")
+    httpPort = 8080
+    contextPath = project.name
+    scanIntervalSeconds = 0
+    reload = "automatic"
 }  
