--- a/spring-flow/flow_ibm/pom.xml
+++ b/spring-flow/flow_ibm/pom.xml
@@ -65,6 +65,15 @@
                     <artifactId>jetty-maven-plugin</artifactId>
                     <version>9.2.8.v20150217</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
             </plugins>
     </build>
 </project>
